Motion Tracking #39700

Closed
opened 2014-04-13 14:32:05 +02:00 by Peter Klapper · 17 comments

System Information
Windows 7 SP1, NVIDIA GeForce GTX 660

Blender Version
Broken: 2.70a - f93bc76
Worked: no Version

Short description of error
Endless Rendering Plane tracking
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
The following procedure:

In the first there is footage a mov. file
2. setting a Four Point Tracking on the movie clip in the movie clip editor
3. to the Four Points taking a Plane Track

It continues in the Node Editor:

In the first ad a MovieClipNode and open movie clip
2. open in the ImageNode a png. Image
3. from MovieClipNode -Image Socket connected to AlpaOverNode Image Socket
4. from ImageNode connected the Image Socket with PlaneTrackDeformNode Image Socket
5. In PlaneTrackDeformNode open Movieclip , than Camera and Plane track
6. from the PlaneTrackDeform Node - Image socket connected with the AlphaOverNode - Image Socket
7. from the PlaneTrackDeform -Plane socket connected to AlphaOverNode Fac socket
8. From the AlphaOverNode - Image socket connected with the Composite Image Socket
9. F 12 for rendering. The computer renders and renders. The render preview remains empty and the rendering process seems to have no end .

**System Information** Windows 7 SP1, NVIDIA GeForce GTX 660 **Blender Version** Broken: 2.70a - f93bc76 Worked: no Version **Short description of error** Endless Rendering Plane tracking **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps The following procedure: In the first there is footage a mov. file 2. setting a Four Point Tracking on the movie clip in the movie clip editor 3. to the Four Points taking a Plane Track It continues in the Node Editor: In the first ad a MovieClipNode and open movie clip 2. open in the ImageNode a png. Image 3. from MovieClipNode -Image Socket connected to AlpaOverNode Image Socket 4. from ImageNode connected the Image Socket with PlaneTrackDeformNode Image Socket 5. In PlaneTrackDeformNode open Movieclip , than Camera and Plane track 6. from the PlaneTrackDeform Node - Image socket connected with the AlphaOverNode - Image Socket 7. from the PlaneTrackDeform -Plane socket connected to AlphaOverNode Fac socket 8. From the AlphaOverNode - Image socket connected with the Composite Image Socket 9. F 12 for rendering. The computer renders and renders. The render preview remains empty and the rendering process seems to have no end .
Author

Changed status to: 'Open'

Changed status to: 'Open'
Peter Klapper self-assigned this 2014-04-13 14:32:05 +02:00
Author

Added subscriber: @Eaglenose

Added subscriber: @Eaglenose

Added subscriber: @mont29

Added subscriber: @mont29
Peter Klapper was unassigned by Bastien Montagne 2014-04-13 14:39:57 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2014-04-13 14:39:57 +02:00
Author

Here is the blende file for others to reproduce the error

Here is the blende file for others to reproduce the error

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

I believe the issue has been fixed in 5a29b55. So please test the latest builds from builder.blender.org and if you'll still an issue please let me know here.

For until then the issue is considered fixed.

I believe the issue has been fixed in 5a29b55. So please test the latest builds from builder.blender.org and if you'll still an issue please let me know here. For until then the issue is considered fixed.
Author

The first impression is good.
However, when I select other frames at the timeline(two times and more), the backdrop view don’t configure the choosen frame and the rendering process is not executed until the end.
Blender stops working.

The first impression is good. However, when I select other frames at the timeline(two times and more), the backdrop view don’t configure the choosen frame and the rendering process is not executed until the end. Blender stops working.
Author

When I try to render the movie by clicking the animate button, blender displays an error message.
“Error settings option flags2 to value fastpskip”.
The movie won't be rendered.
I use blender-2.70-6e9c2d0-win64.
Sorry, where is the download for 5a29b55?

When I try to render the movie by clicking the animate button, blender displays an error message. “Error settings option flags2 to value fastpskip”. The movie won't be rendered. I use blender-2.70-6e9c2d0-win64. Sorry, where is the download for 5a29b55?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

This issue was referenced by blender/blender-addons-contrib@8fd6879b88

This issue was referenced by blender/blender-addons-contrib@8fd6879b88273ded24ab647ee76a116efb4a18c2

This issue was referenced by 8fd6879b88

This issue was referenced by 8fd6879b88273ded24ab647ee76a116efb4a18c2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8fd6879b88.

Closed by commit 8fd6879b88.

Solved some additional cases when sampling takes lots of time. Please test the updated blender.

The issue you're having with animation seems to be related to some option being totally deprecated in FFmpeg, would address it separately.

Solved some additional cases when sampling takes lots of time. Please test the updated blender. The issue you're having with animation seems to be related to some option being totally deprecated in FFmpeg, would address it separately.

Fixed the video output issue as well. But you'll need to re-select h264 from the list to trigger video config to update.

Fixed the video output issue as well. But you'll need to re-select h264 from the list to trigger video config to update.
Author

After extensive testing, I can report that the described errors, are eliminated with the latest Blender version.
The Backdrop view working properly. The movie clip render perfectly.
Awesome. Many, many thanks for your good work.

After extensive testing, I can report that the described errors, are eliminated with the latest Blender version. The Backdrop view working properly. The movie clip render perfectly. Awesome. Many, many thanks for your good work.

Great to hear this! Thanks for the report and feedback! :)

Great to hear this! Thanks for the report and feedback! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39700
No description provided.